--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Control server for irrigation system",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,15 @@
   "bugs": {
     "url": "https://github.com/vicmars5/assisted-irrigation-system-server/issues"
   },
-  "homepage": "https://github.com/vicmars5/assisted-irrigation-system-server#readme"
+  "homepage": "https://github.com/vicmars5/assisted-irrigation-system-server#readme",
+  "dependencies": {
+    "koa": "^2.6.2",
+    "koa-body": "^4.0.4",
+    "koa-json": "^2.0.2",
+    "koa-logger": "^3.2.0",
+    "koa-router": "^7.4.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.6"
+  }
 }
